# string_bonds

./: README.md  pyproject.toml
experiments/: .swp  .test_1in2D.py.swo  .time_evolution.py.swm  .time_evolution.py.swn  .time_evolution.py.swo  .time_evolution.py.swp  .time_evolution_local.py.swp  energies.npy  energy_minimization.py  test_1in2D.py  time_evolution.py  time_evolution_local.py
experiments/1d/: QuantumDMTcopy.py  allParams.npy  quantum.py  quantum_v2.py  tdvpXmps.py  time_evo.py
experiments/1d/data/: 1d_energies_local.npy  1d_evs_local.npy
experiments/data/: 1d.npy  1d_energies_local.npy  1d_energies_tebd.npy  1d_evs_local.npy  1d_evs_tebd.npy  2d_energies_local.npy  2d_energies_tebd.npy  2d_evs_local.npy  2d_evs_tebd.npy  exacts.npy
experiments/optimization/: ansatze.py  energy_minimization.py  test_1in2D.py  test_1in2Dy.py  tfi_exact.py
experiments/tebd/: 1d_iTEBD.py  doTEBD.py  mainTEBD.py  time_evolve.py
experiments/time_evolution/: .1d_time_evolution_local.py.swp  .2d_time_evolution_tebd.py.swp  1d_time_evolution_local.py  1d_time_evolution_tebd.py  2d_time_evolution_local.py  2d_time_evolution_tebd.py
string_bonds/: .states.py.swo  .states.py.swp  states.py  test_states.py
